finally fixed z-index issue and made arrow component (which is actually not really needed and might even be removed again?)

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 
-.arrow {
+/* .arrow {
   border: solid black;
   border-width: 0 3px 3px 0;
   display: inline-block;
@@ -28,7 +28,7 @@
 .arrow.down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
-}
+} */
 
 .btn {
   /* abstract */
